<resources>
    <string name="app_name">Liborg</string>
    <string name="button">Click A Pic</string>
    <string name="login">Sign in</string>
    <string name="email">Email</string>
    <string name="signUp">Sign Up</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm password</string>
    <string name="createAccount">Create</string>
    <string name="linkForLogin">Have an account?</string>
    <string name="submit">Submit</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="mailIcon">&#xf0e0;</string>
    <string name="keyIcon">&#xf084;</string>
    <string name="checkIcon">&#xf00c;</string>
    <string name="homeIcon">&#xf015;</string>
    <string name="bookIcon">&#xf02d;</string>
    <string name="one">Home</string>
    <string name="available">Current Status:</string>
    <string name="returnBook">Return</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="fnameIcon">&#xf007;</string>
    <string name="lnameIcon">&#xf234;</string>
    <string name="borrow">Borrow Book</string>
    <string name="myBooks">Your Books</string>
    <string name="transition_name_name">transition:NAME</string>
    <string name="transition_name_circle">transition:CIRCLE</string>
    <string name="transition_name_author">transition:AUTHOR</string>
    <string name="message_retrive">To reset password please enter your registered email and check your mail.</string>
    <string name="account_recover">Account Recovery</string>
    <string name="pick_issue_type">Select book issue type</string>
    <string name="brought_on">Brought on :</string>
    <string name="author">Author</string>
    <string name="name">Name</string>
    <string name="due_date">Due date</string>
    <array name="issue_method">
        <item>Barcode Scanner</item>
        <item>Book Image</item>
    </array>
</resources>
