<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.cybrilla.shashank.liborg.LogInActivity"
    android:orientation="vertical"
    android:background="#9E9E9E">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logIn"
        android:text="@string/login"
        android:textSize="34sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:textColor="@color/navigationBarColor"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="35dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mailIcon"
            android:text="@string/mailIcon"
            android:textSize="24sp"
            android:layout_marginTop="25dp"
            android:textColor="@color/navigationBarColor"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintAnimationEnabled="true"
            android:textColorHint="@color/black"
            android:textColor="@color/navigationBarColor">

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/loginEmail"
                android:hint="@string/email"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/navigationBarColor"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/keyIcon"
            android:text="@string/keyIcon"
            android:textSize="24sp"
            android:layout_marginTop="45dp"
            android:textColor="@color/navigationBarColor"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="12dp"
            app:hintAnimationEnabled="true"
            android:textColorHint="@color/black"
            android:textColor="@color/black">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/passwordLogin"
                android:hint="@string/password"
                android:layout_marginTop="30dp"
                android:textColor="@color/black"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submit"
        android:layout_gravity="center_horizontal"
        android:text="@string/submit"
        android:layout_marginTop="40dp"
        android:background="#0277BD"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgotPassword"
        android:text="@string/forgotPassword"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:textColor="#01579B"
        android:textStyle="italic"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/newUser"
        android:text="@string/signUp"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:textColor="#01579B"
        android:textStyle="italic"/>

</LinearLayout>
