<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="10dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.cybrilla.shashank.liborg.SignUp"
    android:background="@color/registerScreens">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signUp"
                android:textSize="26sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="0dp"
                android:textColor="@color/navBar"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/fnameIcon"
                    android:text="@string/fnameIcon"
                    android:textSize="20sp"
                    android:layout_marginTop="25dp"
                    android:textColor="@color/navBar"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:textColorHint="@color/navBar"
                    app:hintAnimationEnabled="true">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/fname"
                        android:hint="@string/fname"
                        android:layout_marginTop="300dp"
                        android:textColorHint="@color/pure_black"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="7dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lnameIcon"
                android:text="@string/lnameIcon"
                android:textSize="20sp"
                android:layout_marginTop="25dp"
                android:textColor="@color/navBar"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:textColorHint="@color/navBar"
                app:hintAnimationEnabled="true">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lname"
                    android:hint="@string/lname"
                    android:layout_marginTop="300dp"
                    android:textColorHint="@color/pure_black"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="7dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/mailIconSignUp"
                    android:text="@string/mailIcon"
                    android:textSize="20sp"
                    android:layout_marginTop="25dp"
                    android:textColor="@color/navBar"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:textColorHint="@color/navBar"
                    app:hintAnimationEnabled="true">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/email"
                        android:hint="@string/email"
                        android:textColorHint="@color/pure_black"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="7dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/keyIconSignUp"
                    android:text="@string/keyIcon"
                    android:textSize="20sp"
                    android:layout_marginTop="25dp"
                    android:textColor="@color/navBar"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:textColorHint="@color/navBar"
                    app:hintAnimationEnabled="true">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/password"
                        android:hint="@string/password"
                        android:layout_marginTop="30dp"
                        android:textColorHint="@color/pure_black"
                        android:password="true"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="7dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkIcon"
                    android:text="@string/checkIcon"
                    android:textSize="20sp"
                    android:layout_marginTop="25dp"
                    android:textColor="@color/navBar"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:textColorHint="@color/navBar"
                    app:hintAnimationEnabled="true">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/confirmPassword"
                        android:hint="@string/confirm"
                        android:layout_marginTop="30dp"
                        android:textColorHint="@color/pure_black"
                        android:password="true"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/createAccount"
                android:text="@string/signUp"
                android:layout_marginTop="20dp"
                android:background="@color/success"
                android:textColor="@color/white"
                android:onClick="loginScreen"/>

    </LinearLayout>

</ScrollView>