<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cybrilla.shashank.liborg.DetailActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="140dp"
                android:src="@drawable/lifeofpi"
                android:scaleType="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:transitionName="@string/transition_name_circle"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Effective Java"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    android:textColor="@color/navigationBarColor"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="5dp"
                    android:transitionName="@string/transition_name_name"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Stephaine King"
                    android:textSize="18sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:transitionName="@string/transition_name_author"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="#424242">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Available"
                android:textSize="24sp"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="30dp"
                android:textColor="@color/success"
                android:textStyle="italic"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ratings:"
                android:textSize="24sp"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="45dp"
                android:textColor="@color/white"/>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>
