<?xml version="1.0" encoding="utf-8"?>


<android.support.v7.widget.CardView
    android:id="@+id/card_view_result"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="0dp"
    android:layout_marginLeft="2dp"
    android:layout_marginRight="2dp"
    android:layout_marginTop="2dp"
    android:clickable="true"
    android:transitionName="@string/transition_name_circle"
    card_view:cardCornerRadius="0dp"
    card_view:cardElevation="0dp">


    <LinearLayout
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/bookImageResult"
                android:layout_width="70dp"
                android:layout_height="85dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerInside"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bookNameResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="5dp"
                android:text="Effective Java"
                android:textColor="@color/pure_black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:transitionName="@string/transition_name_name"/>

            <TextView
                android:id="@+id/authorNameResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="5dp"
                android:text="Something"
                android:textColor="#4DB6AC"
                android:textSize="15sp"
                android:textStyle="italic"
                android:transitionName="@string/transition_name_author"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/getIt"
                android:layout_gravity="right"
                android:layout_marginTop="5dp"
                android:background="#009688"
                android:text="Get It"
                android:textColor="@color/white"/>

        </LinearLayout>


    </LinearLayout>


</android.support.v7.widget.CardView>
